--- a/convert/Base.lproj/Main.storyboard
+++ b/convert/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pEg-UE-YsH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="YaU-GA-UEi">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--Piano-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="convert" customModuleProvider="target" sceneMemberID="viewController">
@@ -181,7 +181,7 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="KvX-Ax-7Ex"/>
+                    <tabBarItem key="tabBarItem" title="Piano" image="Classic Music_000000_25" id="KvX-Ax-7Ex"/>
                     <navigationItem key="navigationItem" id="UAL-QF-heE"/>
                     <connections>
                         <outlet property="A" destination="Cto-XD-dMj" id="0hz-6y-hgs"/>
@@ -200,7 +200,7 @@
             </objects>
             <point key="canvasLocation" x="97.8515625" y="147.65625"/>
         </scene>
-        <!--Item-->
+        <!--Record-->
         <scene sceneID="Itj-Bg-Aoi">
             <objects>
                 <viewController id="03P-G0-K4B" customClass="recorderViewController" customModule="convert" customModuleProvider="target" sceneMemberID="viewController">
@@ -211,13 +211,120 @@
                     <view key="view" contentMode="scaleToFill" id="R5m-rI-L8M">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Recorder" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o4e-Ny-3Zu">
+                                <rect key="frame" x="37" y="281" width="967" height="177"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hcB-Hv-Ffu">
+                                <rect key="frame" x="625" y="593" width="333" height="55"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <state key="normal" title="Convert to Sheet music"/>
+                                <connections>
+                                    <segue destination="1Ek-KK-IsG" kind="show" id="kTU-FY-SA3"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="WPH-vR-Pzo"/>
+                    <tabBarItem key="tabBarItem" title="Record" image="Microphone_000000_25" id="WPH-vR-Pzo"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uyl-xS-nBh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="98" y="970"/>
+            <point key="canvasLocation" x="97.8515625" y="969.53125"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="DWI-hG-MhY">
+            <objects>
+                <viewController id="yoS-VW-1P4" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ET7-Oz-Zkw"/>
+                        <viewControllerLayoutGuide type="bottom" id="u4V-Z1-rE6"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="VmX-WJ-qUv">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Saved  Sheets" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2A7-Er-m6R">
+                                <rect key="frame" x="32" y="234" width="967" height="177"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" image="Music Transcript_000000_25" id="JZv-XJ-vre"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="r0h-Hc-0Fy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="106.640625" y="1827.34375"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="2TS-aV-wRT">
+            <objects>
+                <viewController id="tQe-at-kjF" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Ltq-Gr-E4g"/>
+                        <viewControllerLayoutGuide type="bottom" id="jiE-MF-Df6"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="I4u-iD-e5q">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hoZ-TM-qdg">
+                                <rect key="frame" x="53" y="616" width="110" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <state key="normal" title="Discard"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bph-LQ-UmR">
+                                <rect key="frame" x="225" y="616" width="70" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <state key="normal" title="Save"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="CLZ-6Y-DJG"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="byQ-D8-Gxs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1666.9921875" y="985.9375"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="R3g-7U-lB8">
+            <objects>
+                <viewController id="YaU-GA-UEi" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="nej-Fe-6e2"/>
+                        <viewControllerLayoutGuide type="bottom" id="VbF-ke-zAe"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6Ww-CE-HF4">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YgW-l2-DAb">
+                                <rect key="frame" x="370" y="540" width="320" height="78"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Get started"/>
+                                <connections>
+                                    <segue destination="pEg-UE-YsH" kind="presentation" id="Dox-EP-OYq"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zOH-n6-Gsl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1642.3828125" y="513.28125"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="YPs-NK-vzD">
@@ -231,14 +338,36 @@
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="1Zn-kE-lhM"/>
                         <segue destination="03P-G0-K4B" kind="relationship" relationship="viewControllers" id="bDy-0R-LNn"/>
+                        <segue destination="yoS-VW-1P4" kind="relationship" relationship="viewControllers" id="JA4-Ke-vh0"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hnM-wq-QrD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-872" y="502"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="X0O-7l-dAC">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1Ek-KK-IsG" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ape-PT-aej">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="tQe-at-kjF" kind="relationship" relationship="rootViewController" id="6Sm-4h-h2c"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SoC-g9-IJe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="942.77343749999989" y="985.9375"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="Classic Music_000000_25" width="25" height="25"/>
+        <image name="Microphone_000000_25" width="25" height="25"/>
+        <image name="Music Transcript_000000_25" width="25" height="25"/>
         <image name="music-staff" width="700" height="163"/>
     </resources>
 </document>
