--- a/convert/Base.lproj/LaunchScreen.storyboard
+++ b/convert/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="ipad9_7" orientation="landscape">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="5hp-Fp-jY2">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,7 +18,7 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Audio Wave_000000_100-1" translatesAutoresizingMaskIntoConstraints="NO" id="Gum-5y-L5e">
@@ -33,8 +33,54 @@
             </objects>
             <point key="canvasLocation" x="52.734375" y="375"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="aeG-FJ-hSl">
+            <objects>
+                <viewController id="HPk-7n-hXV" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cR3-1B-ZIG"/>
+                        <viewControllerLayoutGuide type="bottom" id="LGD-7O-nMY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cSv-ro-t55">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" image="Launch" translatesAutoresizingMaskIntoConstraints="NO" id="oZJ-h6-Vtl">
+                                <rect key="frame" x="178" y="121" width="245" height="357"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="oZJ-h6-Vtl" firstAttribute="centerY" secondItem="cSv-ro-t55" secondAttribute="centerY" id="AxB-8x-l1x"/>
+                            <constraint firstItem="oZJ-h6-Vtl" firstAttribute="centerX" secondItem="cSv-ro-t55" secondAttribute="centerX" id="Kbf-Yy-blp"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cml-ot-BG4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="53" y="375"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="3Jn-Sd-Ue4">
+            <objects>
+                <viewController id="5hp-Fp-jY2" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="N9U-Oz-PQK"/>
+                        <viewControllerLayoutGuide type="bottom" id="NkW-0c-OtV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="waq-mR-7Ih">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RRz-XH-Dab" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="53" y="375"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Audio Wave_000000_100-1" width="100" height="100"/>
+        <image name="Launch" width="245" height="357"/>
     </resources>
 </document>
